--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,6 +1,15 @@
 .login_page{
     text-align: center;
 }
+.login_page .form{
+    text-align: center;
+}
 .form_data{
     background-color: red;
+}
+.login_page .row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
