--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,15 +1,68 @@
-.login_page{
-    text-align: center;
+.login_page {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 8rem;
+  margin-top: 4rem;
 }
-.login_page .form{
-    text-align: center;
+.login_page form {
+  text-align: center;
+  background-color: #fff;
+  width: 400px;
 }
-.form_data{
-    background-color: red;
+.login_page form input {
+  height: 2rem;
+  width: 100%;
 }
-.login_page .row{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.login_page form input {
+  border: 2px solid #ccc;
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 1.4rem;
+}
+.login_page .row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+.right__container {
+  background-color: #fff;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  padding: 1rem;
+  text-align: center;
+}
+.right__container .password {
+  margin: 1rem;
+}
+.right__container .btn {
+  padding: 1rem;
+  width: 100%;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #1877f2;
+  color: #fff;
+  border: 0;
+  font-size: 18px;
+}
+.forgotten__password {
+  cursor: pointer;
+  margin-top: 1rem;
+  background-color: #fff;
+  color: blue;
+  margin-bottom: 1rem;
+}
+.signup__account {
+  margin-top: 1rem;
+  width: 50%;
+  border: 0;
+  background-color: #42b72a;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
 }
